[project]
name = "sudoku_solver"
version = "0.1.0"
description = "A Sudoku solver based on a custom algorithm"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Rafael and Dad"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sudoku_solver"]

[tool.uv]
dev-dependencies = []

